--- a/.github/workflows/first-example.yml
+++ b/.github/workflows/first-example.yml
@@ -8,11 +8,17 @@ jobs:
         steps:
         - name: Chekout Repo
           uses: actions/checkout@v4
-        - name: Welcome message
-          run: echo "My first Github Actions Job"
-          
-        - name: List file
-          run: ls
         
-        - name: Read file
-          run: cat README.md
+        - name: List and Read file
+          run: |
+            echo "My first Github Actions Job"
+            ls -ltra
+            cat README.md
+
+        - name: Generate ASCII Artwork
+          run: cowsay -f dragon "Run for cover, I am a DRAGON.....RAWR" >> dragon.txt
+        # - name: List file
+        #   run: ls
+        
+        # - name: Read file
+        #   run: cat README.md
