indetation issue solved in generate-asciiart

--- a/.github/workflows/generate-ascii.yml
+++ b/.github/workflows/generate-ascii.yml
@@ -1,27 +1,26 @@
 name: Generate ASCII ARTWORK
 
 on:
-    push
+  push
 
 jobs:
-    ascii_job:
-        runs-on: ubuntu-latest
-        steps:
-        - name: Checkout Repo
-          uses: actions/checkout@v4
-          
-        - name: Install Cowsay Program
-          uses: sudo apt-get install cowsay -y
+  ascii_job:
+    runs-on: ubuntu-latest
+    steps:
+    - name: Checkout Repo
+      uses: actions/checkout@v4
         
-        - name: Execute Cowsay CMD
-          uses: cowsay -f dragon "Run for cover, I am a DRAGON.....RAWR" >> dragon.txt
+    - name: Install Cowsay Program
+      run: sudo apt-get install cowsay -y
+    
+    - name: Execute Cowsay CMD
+      run: cowsay -f dragon "Run for cover, I am a DRAGON.....RAWR" >> dragon.txt
 
-        - name: Test File Exists
-          run: grep -i "dragon" dragon.txt
-        
-        - name: Read File
-          run: cat dragon.txt
+    - name: Test File Exists
+      run: grep -i "dragon" dragon.txt
+    
+    - name: Read File
+      run: cat dragon.txt
 
-        - name: List Repo Files
-          run: ls -ltra
-          
+    - name: List Repo Files
+      run: ls -ltra
