--- a/.github/workflows/generate-ascii.yml
+++ b/.github/workflows/generate-ascii.yml
@@ -15,7 +15,7 @@ jobs:
         
     - name: Execute Shell Script
       run: |
-        chmod +x ascii-script.sh
-        ascii-script.sh
+        chmod +x ./ascii-script.sh
+        ./ascii-script.sh
 
    
