--- a/.github/workflows/generate-ascii.yml
+++ b/.github/workflows/generate-ascii.yml
@@ -4,6 +4,39 @@ on:
   push
 
 jobs:
+  build_job_1:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Install Cowsay Program
+        run: sudo apt-get install cosway -y
+
+      - name: Execute Cosway CMD
+        run: cosway -f dragon "Run for cover, I am a DRAGONNN,....RAWRRRR" >> dragon.txt
+
+      - name: Sleep for 30 seconds
+        run: sleep 30
+    
+  test_job_2:
+    runs-on: ubuntu-latest
+    steps:
+    - name: Sleep for 10 seconds
+      run: sleep 10
+
+    - name: Test File Exists
+      run: grep -i "dragon" dragon.txt
+
+  deploy_job_3:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Read File
+        run: cat dragon.txt
+      
+      - name: Deploy
+        run: echo Deploying... ... ...
+
+
+
+  
   ascii_job:
     runs-on: ubuntu-latest
     steps:
