--- a/.github/workflows/variable-secrets.yml
+++ b/.github/workflows/variable-secrets.yml
@@ -5,7 +5,6 @@ on:
 
 env:
     CONATAINER_REGISTRY: docker.io
-    DOCKER_USERNAME: siddharth1
     IMAGE_NAME: github-actions-nginx
 
 
@@ -17,9 +16,7 @@ jobs:
               run:  echo docker build -t ${{env.CONATAINER_REGISTRY}}/$DOCKER_USERNAME/$IMAGE_NAME:latest
 
             - name: Docker Login
-              env:
-                DOCKER_PASSWORD: s3cUrePaSsw0rd
-              run: echo docker login --username=$DOCKER_USERNAME --password=$DOCKER_PASSWORD
+              run: echo docker login --username=$DOCKER_USERNAME --password=${{secrets.DOCKER_PASSWORD}}
 
             - name: Docker Publish
               run: echo docker push $CONATAINER_REGISTRY/$DOCKER_USERNAME/$IMAGE_NAME:latest
@@ -30,4 +27,4 @@ jobs:
         steps:
             - name: Docker Run
               run: echo docker run -d -p 8080:80 $CONATAINER_REGISTRY/$DOCKER_USERNAME/$IMAGE_NAME:latest
-              
+
