--- a/.github/workflows/variable-secrets.yml
+++ b/.github/workflows/variable-secrets.yml
@@ -23,9 +23,13 @@ jobs:
 
     deploy:
         needs: docker
+        concurrency: 
+          group: production-deployment
+          cancel-in-progress: true
         runs-on: ubuntu-latest
         steps:
             - name: Docker Run
+              timeout-minutes: 0.2
               run: |
                 echo docker run -d -p 8080:80 $CONATAINER_REGISTRY/${{vars.DOCKER_USERNAME}}/$IMAGE_NAME:latest
-                sleep 10
+                sleep 30
