--- a/.github/workflows/matrix-configuration.yml
+++ b/.github/workflows/matrix-configuration.yml
@@ -5,19 +5,23 @@ on:
     workflow_dispatch:
     
 jobs:
-    deploy-on-ubuntu:
-        runs-on: ubuntu-latest
-        steps:
-        - name: Echo Docker Details
-          run: docker run hello-world
-
-    deploy-on-windows:
-        runs-on: window-latest
+    deploy:
+        strategy:
+            matrix:
+                os: [ubuntu-latest, ubuntu-20.04, windows-latest]
+                images: [hello-world, alpine]
+                exclude:
+                    - images: alpine
+                      os: windows-latest
+                include:
+                    - images: amd64/alpine
+                      os: ubuntu-20.04
+        runs-on: ${{matrix.os}}
         steps:
         - name: Echo Docker Details
           run: docker info
-        
-        - name: Run Images
-          run: docker run hello-world
+
+        - name: Run Image on ${{matrix.os}}
+          run: docker run ${{matrix.images}}
 
         
